# ImageResizer

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/superpowers/plans/: 2026-04-25-image-resizer-plan.md
docs/superpowers/specs/: 2026-04-25-image-resizer-design.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  processor.rs  scanner.rs  state.rs
src/lib/: types.ts
src/lib/components/: FileBrowser.svelte  OutputSettings.svelte  ProfileSelector.svelte  ProgressPanel.svelte  QualitySettings.svelte  ResizeSettings.svelte  SettingsPanel.svelte
src/lib/stores/: files.ts  profiles.ts  progress.ts
src/lib/utils/: format.ts
